[project]
name = "mlproject"
version = "0.0.1"
description = "ML project package"
authors = [
  { name = "Neel", email = "neelpavale7@gmail.com" }
]
requires-python = ">=3.8"

dependencies = [
  "pandas",
  "numpy",
  "seaborn"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
